[package]
name = "org-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.70"
axum = { version = "0.6.18", features = ["headers"] }
config = { version = "0.13.3", features = ["toml"] }
lazy_static = "1.4.0"
maud = { version = "0.25.0", features = ["axum"] }
nom = "7.1.3"
orgize = { version = "0.9.0", features = ["chrono"] }
reqwest = "0.11.18"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
xml = "0.8.10"

