[package]
name = "org-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.6.20", features = ["headers"] }
config = { version = "0.13.4", features = ["toml"] }
futures = "0.3.30"
futures-util = "0.3.30"
lazy_static = "1.4.0"
maud = { version = "0.25.0", features = ["axum"] }
nom = "7.1.3"
orgize = { version = "0.9.0", features = ["chrono"] }
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
xml = "0.8.10"

[dev-dependencies]
scraper = "0.18.1"
tempfile = "3.9.0"
